# daily-messenger

./: .env.example  .gitignore  AGENTS.md  README.md  api_keys.json.example  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: btc-d.yml  btc-daily.yml  btc-h1.yml  btc-m1.yml  daily.yml  xau-d.yml  xau-h1.yml  xau-intraday.yml  xau-m5.yml
config/: ta_btc.yml  ta_btc_daily.yml  ta_btc_h1.yml  ta_btc_m1.yml  ta_xau.yml  ta_xau_daily.yml  ta_xau_h1.yml  ta_xau_m5.yml  weights.yml
digest/: make_daily.py
digest/templates/: report.html.j2
dm/: __init__.py  cli.py
docs/: data_source.md  glm-4.6.md  thinking.md  web-search.md
etl/: run_fetch.py
etl/fetchers/: aaii_sentiment.py  cboe_putcall.py
project_tools/: btc_ws_alert.py  combine_code.py  fmp_connectivity_test.py  update_cli_help.py  verify_tushare_tokens.py
scoring/: __init__.py  run_scores.py
scripts/crypto_btc/: btc_daily_report.py  incremental_fetch.py  init_binance_history.py  ws_alert.py
src/daily_messenger/: __init__.py  cli.py
src/daily_messenger/common/: logging.py  run_meta.py
src/daily_messenger/crypto/: __init__.py  klines.py  report.py
tests/: conftest.py  test_cli_pipeline.py  test_cli_smoke.py  test_contracts.py  test_crypto_btc.py  test_degraded_mode.py  test_digest.py  test_digest_snapshot.py  test_digest_snapshots.py  test_etl_ai_feeds.py  test_post_feishu.py  test_scoring.py  test_sentiment_fetchers.py
tests/__snapshots__/: digest_card.json  digest_index.html
tests/digest/: test_ta_report.py
tools/: __init__.py  post_feishu.py
(+12 files in other folders)
