[project]
name = "daily-messenger"
version = "0.1.0"
description = "Automated daily market digest pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  {name = "Daily Messenger Maintainers"}
]
dependencies = [
  "requests==2.31.0",
  "PyYAML==6.0.1",
  "Jinja2==3.1.3",
  "pytz==2024.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "ruff>=0.3"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
managed = true

[tool.setuptools.packages.find]
include = [
  "digest*",
  "scoring*",
  "etl*",
  "tools*",
]
