[project]
name = "daily-messenger"
version = "0.1.0"
description = "Automated daily market digest pipeline"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [
  {name = "Daily Messenger Maintainers"}
]
dependencies = [
  "requests>=2.31,<3",
  "PyYAML>=6,<7",
  "Jinja2>=3.1,<3.2"
]

[dependency-groups]
dev = [
  "pytest>=8.1",
  "pytest-cov>=7.0,<8",
  "ruff>=0.3"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["daily_messenger*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"daily_messenger.digest" = ["templates/*.j2"]

[project.scripts]
dm = "daily_messenger.cli:main"
